// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectionRecoveryRequest activated recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="You are now ready to claim the access to address vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz."
    />
    <ButtonGroup
      className="Claim"
    >
      <Button
        data-testid="btnClaim"
        onClick={[Function]}
        variant="polkadot"
      >
        Claim
      </Button>
    </ButtonGroup>
    <ExtrinsicSubmissionStateView />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°1"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°2"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest active recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="You are now ready to claim the access to address vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz."
    />
    <ButtonGroup
      className="Claim"
    >
      <Button
        data-testid="btnClaim"
        onClick={[Function]}
        variant="polkadot"
      >
        Claim
      </Button>
    </ButtonGroup>
    <ExtrinsicSubmissionStateView />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°1"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          status="ACCEPTED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°2"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          status="ACCEPTED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  subTitle="Recovery process status"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#ff9b3f"
      icon="pending"
      text="Your Logion Recovery request  for account vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz has been submitted for review. Your Legal Officers will contact you
                        as soon as possible to finalize the procedure."
    />
    <ExtrinsicSubmissionStateView />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°1"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          label="Legal Officer N°2"
          legalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Guillaume Grain",
              "node": "http://logion.guillaume.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "LYON",
                "company": "SELARL ADRASTEE",
                "country": "France",
                "line1": "Gare des Brotteaux",
                "line2": "14, place Jules Ferry",
                "postalCode": "69006",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "g.grain@adrastee-lyon.fr",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+33 4 78 52 87 56",
              },
              "workload": 3,
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Patrick Gielen",
                "node": "http://logion.patrick.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Etterbeek",
                  "company": "MODERO",
                  "country": "Belgique",
                  "line1": "Huissier de Justice Etterbeek",
                  "line2": "Rue Beckers 17",
                  "postalCode": "1040",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "patrick@logion.network",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+32 498 237 107",
                },
                "workload": 1,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvWaxNDdzuX5N3qSvGMtjdHcQdw1TAcPNgx4S1Utd3MTxYeN",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Guillaume Grain",
                "node": "http://logion.guillaume.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "LYON",
                  "company": "SELARL ADRASTEE",
                  "country": "France",
                  "line1": "Gare des Brotteaux",
                  "line2": "14, place Jules Ferry",
                  "postalCode": "69006",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "g.grain@adrastee-lyon.fr",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 4 78 52 87 56",
                },
                "workload": 3,
              },
              TestLegalOfficer {
                "account": ValidAccountId {
                  "anyAccountId": AnyAccountId {
                    "address": "vQvZF2YMgKuQhzfF7T3xDjHjuEmcPSUVEoUDPy1mzuSXzFgca",
                    "type": "Polkadot",
                  },
                },
                "additionalDetails": "",
                "axiosFactory": Object {
                  "buildAxiosInstance": [MockFunction],
                },
                "config": undefined,
                "name": "Alain Barland",
                "node": "http://logion.alain.com",
                "nodeId": "",
                "postalAddress": Object {
                  "city": "Bourges",
                  "company": "AUXILIA CONSEILS 18",
                  "country": "France",
                  "line1": "Huissiers de Justice associés",
                  "line2": "7 rue Jean Francois Champollion Parc Comitec",
                  "postalCode": "18000",
                },
                "region": "Europe",
                "token": undefined,
                "userIdentity": Object {
                  "email": "alain.barland@auxilia-conseils.com",
                  "firstName": "Patrick",
                  "lastName": "Gielen",
                  "phoneNumber": "+33 2 48 67 50 50",
                },
                "workload": 2,
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            TestLegalOfficer {
              "account": ValidAccountId {
                "anyAccountId": AnyAccountId {
                  "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
                  "type": "Polkadot",
                },
              },
              "additionalDetails": "",
              "axiosFactory": Object {
                "buildAxiosInstance": [MockFunction],
              },
              "config": undefined,
              "name": "Patrick Gielen",
              "node": "http://logion.patrick.com",
              "nodeId": "",
              "postalAddress": Object {
                "city": "Etterbeek",
                "company": "MODERO",
                "country": "Belgique",
                "line1": "Huissier de Justice Etterbeek",
                "line2": "Rue Beckers 17",
                "postalCode": "1040",
              },
              "region": "Europe",
              "token": undefined,
              "userIdentity": Object {
                "email": "patrick@logion.network",
                "firstName": "Patrick",
                "lastName": "Gielen",
                "phoneNumber": "+32 498 237 107",
              },
              "workload": 1,
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;
